[package]
name = "ray-rust-wasm"
version = "0.1.0"
authors = ["Masahiro <masahiro.sakuta@zmp.co.jp>"]
edition = "2018"

## new things...
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.67"
image = "0.22.1"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
js-sys = ""
rand = "0.7.3"
console_error_panic_hook = "0.1.6"
libm = "0.1.4"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[dependencies.web-sys]
version = "0.3.4"
features = [
    'CanvasRenderingContext2d',
    'Element',
    'HtmlElement',
    'Node',
    'Document',
    'ImageData',
    'Window',
]
