[package]
name = "ray-rust-wasm"
version = "0.1.0"
authors = ["Masahiro <masahiro.sakuta@zmp.co.jp>"]
edition = "2018"

## new things...
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.67"
image = "0.22.1"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
js-sys = ""

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[dependencies.web-sys]
version = "0.3.4"
features = [
    'CanvasRenderingContext2d',
        'Element',
        'HtmlElement',
        'Node',
       'Document',
    'ImageData',
    'Window',
]
