[package]
name = "cfd-wasm"
version = "0.1.0"
authors = ["Masahiro <masahiro.sakuta@zmp.co.jp>"]
edition = "2018"

## new things...
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.67"
js-sys = ""
console_error_panic_hook = "0.1.6"
libm = "0.1.4"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[dependencies.web-sys]
version = "0.3.4"
features = [
    'CanvasRenderingContext2d',
    'WebGlBuffer',
    'WebGlRenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlUniformLocation',
    'WebGlTexture',
    'Element',
    'HtmlElement',
    'HtmlCanvasElement',
    'Node',
    'MouseEvent',
    'Document',
    'ImageData',
    'Window',
]
